# astro-float

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: 1-rustfmt.yml  2-tests.yml  rust.yml
astro-float/: Cargo.toml  README.md
astro-float-macro/: Cargo.toml  README.md
astro-float-macro/src/: lib.rs  util.rs
astro-float-macro/tests/: mod.rs
astro-float-macro/tests/tests/: expr.rs
astro-float-num/: Cargo.toml  README.md
astro-float-num/src/: conv.rs  ctx.rs  defs.rs  ext.rs  lib.rs  macro_util.rs  num.rs  parser.rs  strop.rs
astro-float-num/src/common/: buf.rs  consts.rs  int.rs  mod.rs  util.rs
astro-float-num/src/for_3rd/: de.rs  mod.rs  ser.rs
astro-float-num/src/mantissa/: cbrt.rs  conv.rs  div.rs  fft.rs  mantissa.rs  mod.rs  sqrt.rs  toom3.rs  util.rs
astro-float-num/src/ops/: acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cbrt.rs  cos.rs  cosh.rs  log.rs  pow.rs  series.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tanh.rs  tests.rs  util.rs
astro-float-num/src/ops/consts/: e.rs  ln10.rs  ln2.rs  mod.rs  pi.rs
astro-float-num/tests/: integration_tests.rs
astro-float-num/tests/mpfr/: common.rs  compare_const_test.rs  compare_ops_test.rs  compare_special_test.rs
astro-float/src/: conv.rs  ctx.rs  ext.rs  lib.rs  num.rs  strop.rs
astro-float/src/common/: int.rs  util.rs
astro-float/src/mantissa/: cbrt.rs  div.rs  mantissa.rs  mod.rs  mul.rs  sqrt.rs
astro-float/src/ops/: acosh.rs  asin.rs  asinh.rs  atan.rs  cbrt.rs  cos.rs  cosh.rs  log.rs  pow.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tests.rs
astro-float/src/ops/consts/: e.rs  ln10.rs  ln2.rs  mod.rs  pi.rs
astro-float/tests/: integration_tests.rs  mod.rs
astro-float/tests/mpfr/: compare_ops_test.rs  compare_special_test.rs
astro-float/tests/tests/: expr.rs
doc/: README.md
src/: atan_const.rs  conv.rs  ctx.rs  defs.rs  ext.rs  format.rs  increased.rs  lib.rs  mantissa.rs  num.rs  parser.rs  sin_const.rs  sqrt_const.rs  strop.rs  tan_const.rs
src/common/: buf.rs  consts.rs  int.rs  mod.rs  util.rs
src/for_3rd/: de.rs  ser.rs
src/inc/: inc.rs  mod.rs
src/inc/ops/: add.rs  cbrt.rs  log.rs  mod.rs  mul.rs  other.rs  pow.rs  sqrt.rs  trig.rs  trigh.rs  util.rs
src/inc/ops/tables/: asin_const.rs  asinh_const.rs  atan_const.rs  cbrt_const.rs  exp_const.rs  fact_const.rs  ln_const.rs  mod.rs  sin_const.rs  sqrt_const.rs  tan_const.rs  tanh_const.rs
src/mantissa/: buf.rs  cbrt.rs  div.rs  fft.rs  mantissa.rs  mod.rs  mul.rs  sqrt.rs  toom2.rs  toom3.rs  util.rs
src/ops/: acos.rs  acosh.rs  add.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cbrt.rs  cos.rs  cosh.rs  ln.rs  log.rs  mod.rs  mul.rs  other.rs  pow.rs  series.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tanh.rs  tests.rs  trig.rs  trigh.rs  util.rs
src/ops/consts/: e.rs  ln10.rs  ln2.rs  mod.rs  no_std.rs  pi.rs  std.rs
src/ops/tables/: ln_const.rs  mod.rs
tests/: README.md  mod.rs  mpfr_compare_test.rs
tests/mpfr/: common.rs  compare_const_test.rs  compare_ops_test.rs  compare_special_test.rs  mod.rs
