[package]
name = "astro-float-macro"
version = "0.1.2"
edition = "2021"
authors = ["stencillogic <stencillogic@gmail.com>"]
license = "MIT"
description = "Macros for multiple precision floating point numbers library astro-float."
categories = ["algorithms", "data-structures", "science"]
keywords = ["bigfloat", "numeric", "mathematics", "bignum"]
repository = "https://github.com/stencillogic/astro-float"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1", default-features = false }
syn = { version = "1", default-features = false, features = ["parsing", "proc-macro", "full", "extra-traits", "printing"] }
astro-float-num = { version = "0.1.0", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[dev-dependencies]
trybuild = "1.0"