[package]
name = "astro-float-num"
version = "0.3.4"
edition = "2021"
authors = ["stencillogic <stencillogic@gmail.com>"]
license = "MIT"
description = "Multiple precision floating point numbers implemented purely in Rust."
categories = ["algorithms", "data-structures", "science"]
keywords = ["bigfloat", "numeric", "mathematics", "bignum"]
readme = "README.md"
repository = "https://github.com/stencillogic/astro-float"

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.89"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
rug = { version = "~1.20.0", features = ["float", "rand"] }
gmp-mpfr-sys = { version = "~1.6.0", features = [] }

[dependencies]
serde = { version = "1.0.147", optional = true }
rand = { version = "0.8.5", optional = true }
lazy_static = { version = "1.4.0", default-features = false, features = [] }
itertools = { version = "0.10.3", default-features = false, features = [] }

[features]
default = ["std", "random", "serde"]
std = []
random = ["dep:rand"]
serde = ["dep:serde"]
